There's no licence for this code, I don't like lawspeak anyway. Simply use it without any limitation in any way you want to, that's all. The only guarantee there is there are bugs in the code :) With any questions or comments, contact me please at ocs (at) ocs (dot) cz.

=== known TODOs ===
- raw dict editor for all items (either improved raw viewer, or text-based)
- model group support
- validations (when saving, before SQL generation, when user asks to, in reasonable extent automatically... among others, warn/not err/ on different packages in model...)
- reasonable prototype support (can't be done before model groups)
- undo with UserInfo editor
- smart relationship editor, M:N management etc
- better fetch spec editor
- better SQL generation with customizable templates (perhaps flexible enough for Java generation too, presumed anyone still uses that EOGenerator thing?)
- model creation (which would work, unlike the current model creation :))
- stored procedures... does anybody use the thing?
- entity indexes
=== convenience and aesthetics ===
- make smartsort model-based, not global
- paste/dragdrop model objects full-featured (eg., paste attribs/relationships into entities; solve class props, etc.)
- drag-based relationship creation
- why the hell up/down arrows do not work in attribute/relationship lists?!?
- when renaming attribs/rels, update entity lists (class props etc.), and to stay on the safe side, warn/remove on saving on old ids in those lists. Update also usages in relationships (ditto for entity names, used as destinations)
- default entity templates: New.. from template, auto-copies
- auto-fill usual things like EOInnerJoin for rels (or leave it to validations?)

=== 2.9 ===
Implemented own plist output format
- it is better than relying on essentially undocumented strings file export behaviour
- it allows us to sort dictionary items, making so files much more diff-friendly

Improved SQL name generator not to dup _'s
