@@ -131,6 +131,42 @@ static NSString *stringFromJoins(NSArray *joins,BOOL inverted) {
     return ms;
 }
 -(NSString*)inverseRelationshipName {
+    if (self.definition.length) {
+#warning Should improve so that it works properly for any number of intermediate steps; this is hard-coded for standard M:N
+        NSArray<NSString*> *path=[self.definition componentsSeparatedByString:@"."];
+        EORelationship *mn,*bkmn,*fwmn,*bk,*nm;
+        for (EORelationship *r in self.entity.relationships) if (OCSEquals(r.name, path[0])) { mn=r; break; }
+        if (!mn) return @"Flattened-by relationship unknown";
+        if (!mn.destination.length) return @"Flattened-by entity not set";
+        EOEntity *de=[self.model entityNamed:mn.destination];
+        if (!de) return [NSString stringWithFormat:@"Flattened-by entity '%@' not found",mn.destination];
+        if (!mn.joins.count) return [NSString stringWithFormat:@"No flattened-by joins to '%@' are set",mn.destination];
+        NSString *ikey=stringFromJoins(mn.joins, YES);
+        for (EORelationship *r in de.relationships)
+            if (OCSEquals(r.destination,self.entity.name) && OCSEquals(stringFromJoins(r.joins,NO), ikey)) bkmn=r;
+            else if (OCSEquals(r.name, path.lastObject)) fwmn=r;
+        if (!bkmn) return [NSString stringWithFormat:@"None from entity '%@'",mn.destination];
+        if (path.count<2) // normally should not happen
+            return [NSString stringWithFormat:@"\u21b0 %@.%@: %@",mn.destination,bkmn.name,bkmn.displayJoins];
+        if (path.count>2) // normally should not happen
+            return [NSString stringWithFormat:@"\u21b0 %@.%@: %@ + path(unparsed!)",mn.destination,bkmn.name,bkmn.displayJoins];
+        // for 2-item path we show the rest
+        if (!fwmn) return [NSString stringWithFormat:@"\u21b0 %@.%@: %@ + relshp '%@' not found!",mn.destination,bkmn.name,bkmn.displayJoins,path.lastObject];
+        EOEntity *fe=[self.model entityNamed:fwmn.destination];
+        if (!fe) return [NSString stringWithFormat:@"\u21b0 %@.%@: %@ + entity '%@' not found!",mn.destination,bkmn.name,bkmn.displayJoins,fwmn.destination];
+        if (!fwmn.joins) return [NSString stringWithFormat:@"«» %@ no-joins in $fwmn.name! ⤳ %@.%@: %@",fe.name,mn.destination,bkmn.name,bkmn.displayJoins];
+        ikey=stringFromJoins(fwmn.joins, YES);
+        for (EORelationship *r in fe.relationships)
+            if (OCSEquals(r.destination,mn.destination) && OCSEquals(stringFromJoins(r.joins,NO), ikey)) bk=r;
+            else if (r.definition.length) {
+                NSArray *rp=[r.definition componentsSeparatedByString:@"."];
+                if (rp.count==2 && OCSEquals(rp[0], bk.name) && OCSEquals(rp[1], bkmn.name)) nm=r;
+            }
+        if (!bk) return [NSString stringWithFormat:@"«» %@ none for $fwmn.name! ⤳ %@.%@: %@",fe.name,mn.destination,bkmn.name,bkmn.displayJoins];
+        if (bk.isClassProperty) return [NSString stringWithFormat:@"«» %@.%@ %@ ⤳ %@.%@: %@ ", fe.name, bk.name, bk.displayJoins, bk.destination, bkmn.name, bkmn.displayJoins];
+        if (!nm) return [NSString stringWithFormat:@"«» no flattened-by found at destination: %@.%@ %@ ⤳ %@.%@: %@ ", fe.name, bk.name, bk.displayJoins, bk.destination, bkmn.name, bkmn.displayJoins];
+        return [NSString stringWithFormat:@"«» %@.%@ ⤳ .%@ %@ ⤳ %@.%@: %@ ", fe.name, nm.name, bk.name, bk.displayJoins, bk.destination, bkmn.name, bkmn.displayJoins];
+    }
     if (!self.destination.length) return @"Target entity not set";
     EOEntity *de=[self.model entityNamed:self.destination];
     if (!de) return @"Destination entity not found";
