@@ -3,7 +3,7 @@ There's no licence for this code, I don't like lawspeak anyway. Simply use it wi
 === known TODOs ===
 - raw dict editor for all items (either improved raw viewer, or text-based)
 - model group support
-- validations (when saving, before SQL generation, when user asks to, in reasonable extent automatically... among others, warn/not err/ on different packages in model...)
+- validations (when saving, before SQL generation, when user asks to, in inspectors, in reasonable extent automatically... among others, warn/not err/ on different packages in model...)
 - reasonable prototype support (can't be done before model groups)
 - undo with UserInfo editor
 - smart relationship editor, M:N management etc
@@ -13,6 +13,7 @@ There's no licence for this code, I don't like lawspeak anyway. Simply use it wi
 - stored procedures... does anybody use the thing?
 - entity indexes
 === convenience and aesthetics ===
+- find a reasonable widget to replace drawer with, split is ugly. Inspector window perhaps? And use it...
 - make smartsort model-based, not global
 - paste/dragdrop model objects full-featured (eg., paste attribs/relationships into entities; solve class props, etc.)
 - drag-based relationship creation
@@ -20,6 +21,7 @@ There's no licence for this code, I don't like lawspeak anyway. Simply use it wi
 - when renaming attribs/rels, update entity lists (class props etc.), and to stay on the safe side, warn/remove on saving on old ids in those lists. Update also usages in relationships (ditto for entity names, used as destinations)
 - default entity templates: New.. from template, auto-copies
 - auto-fill usual things like EOInnerJoin for rels (or leave it to validations?)
+- perhaps for flattened rels show below definition field forward same way am showing backward in inverse, perhaps also for nonempty definition hide widgets which do not make sense? (Similar with :1 and :N... far future :))
 
 === 2.9 ===
 Implemented own plist output format
@@ -33,6 +35,8 @@ Model can have a default package, which is automatically prepended to all sugges
 Each cz.ocs.CheckFilesInterval seconds (registered 5; 0 would switch the feature off completely) application checks the files on disk for changes (e.g., a merge from remote or a checkout of a different branch). If changed, then if not edited and cz.ocs.AutoRevertToDiskVersion (not registered=NO) is set, automatically reverts to it; otherwise, shows an alert for the user to decide.
 
 *Beware* not tested much, also error reporting not quite good, some potential problems only logged.
+
+Inverse relationship field properly detects flattened M:N's (and wraps to more lines if needed)
 
 Also: bumped up minimal version, no need to support really ancient macOSen :)
 
